# pricing-prediction

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.agents/skills/dev-webscrapper/agents/: openai.yaml
.agents/skills/dev-webscrapper/references/: falabella-pe.md  project-shape.md
.agents/skills/feature-pr-review-gate/: SKILL.md
.agents/skills/feature-pr-review-gate/agents/: openai.yaml
.agents/skills/feature-pr-review-gate/references/: review-rubric.md
.agents/skills/feature-pr-review-gate/scripts/: git_pr_workflow.py
.agents/skills/flask-backend/: SKILL.md
.agents/skills/flask-backend/agents/: openai.yaml
.agents/skills/flask-backend/references/: completeness-checklist.md
.agents/skills/levantar-observaciones-pr/: SKILL.md
.agents/skills/levantar-observaciones-pr/references/: github-pr-workflow.md
.agents/skills/ml-dl-experimentation/: SKILL.md
.agents/skills/ml-dl-experimentation/agents/: openai.yaml
.agents/skills/ml-dl-experimentation/scripts/: create_experiment_notebook.py
.agents/skills/plan-conventional-commits/: SKILL.md
.agents/skills/plan-conventional-commits/scripts/: plan_commits.py
.beads/: metadata.json
docs/runbooks/: current-price-prediction.md
migrations/: env.py
migrations/versions/: 20260310_01_create_scrape_tables.py
notebook/: 20260312-current-price-no-leakage.ipynb  20260312-current-price-product-snapshots.ipynb
plans/: 20260309-2101-falabella-scraper-supabase.md  20260311-2120-current-price-prediction-api.md  20260313-2020-web-app-current-price-ui.md
skills/dev-webscrapper/: SKILL.md
skills/dev-webscrapper/scripts/: falabella_selenium_scaffold.py
skills/levantar-observaciones-pr/agents/: openai.yaml
skills/plan-conventional-commits/: SKILL.md
skills/plan-conventional-commits/agents/: openai.yaml
skills/plan-feature-implementation/: SKILL.md
skills/plan-feature-implementation/agents/: openai.yaml
skills/plan-feature-implementation/references/: plan-template.md
src/pricing_prediction/: __init__.py  app.py  cli.py  config.py  errors.py  extensions.py
src/pricing_prediction/api/: __init__.py  health.py  predictions.py  scrape_runs.py
src/pricing_prediction/clients/: falabella_client.py
src/pricing_prediction/db/: models.py  repositories.py
src/pricing_prediction/ml/current_price/: __init__.py  artifacts.py  data.py  features.py  training.py
src/pricing_prediction/schemas/: __init__.py  prediction.py  scrape.py
src/pricing_prediction/scraper/falabella/: browser_fallback.py  next_data.py  normalize.py
src/pricing_prediction/services/: current_price_predictions.py  scrape_runs.py
src/pricing_prediction/static/css/: app.css
src/pricing_prediction/static/js/: predict-form.js
src/pricing_prediction/templates/: base.html  home.html  predict.html  predict_help.html
src/pricing_prediction/templates/partials/: prediction_result.html
src/pricing_prediction/web/: __init__.py  field_glossary.py  forms.py  routes.py
tests/: conftest.py
tests/api/: test_predictions_api.py  test_scrape_run_api.py
tests/fixtures/falabella/: search_page_1.html  search_page_30.html
tests/ml/: test_current_price_training.py
tests/scraper/falabella/: test_next_data_parser.py  test_normalize.py
tests/services/: test_current_price_predictions.py  test_scrape_run_service.py
tests/web/: test_field_glossary.py  test_pages.py  test_prediction_forms.py
