[project]
name = "pricing-prediction"
version = "0.1.0"
description = "Falabella scraper backend with Flask and Supabase-ready Postgres persistence."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2",
  "beautifulsoup4>=4.12,<5",
  "flask>=3.1,<4",
  "flask-sqlalchemy>=3.1,<4",
  "httpx>=0.28,<0.29",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.10,<3",
  "selenium>=4.29,<5",
  "sqlalchemy>=2.0,<3",
  "tenacity>=9.0,<10",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "ruff>=0.9,<0.10",
]

[project.scripts]
pricing-prediction = "pricing_prediction.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pricing_prediction"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
packages = ["pricing_prediction"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "pricing_prediction.db.models",
  "pricing_prediction.db.repositories",
  "pricing_prediction.scraper.falabella.browser_fallback",
]
ignore_errors = true
